# xxUSD

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  program-id.json  tsconfig.json
programs/xxusd/: Cargo.toml
programs/xxusd/src/: core.rs  error.rs  events.rs  lib.rs
programs/xxusd/src/instructions/: edit_controller.rs  freeze_program.rs  initialize_controller.rs  lock_xxusd.rs  manage_hedging_strategy.rs  manage_product_price.rs  mint.rs  mod.rs  redeem.rs  release_xxusd.rs
programs/xxusd/src/oracle/: switchboard_oracle.rs
programs/xxusd/src/state/: controller.rs  hedging_strategy.rs  kamino_depository.rs  lock_manager.rs  manage_hedging_strategy.rs  manage_product_price.rs  mod.rs
programs/xxusd/src/utils/: calculate_depositories_mint_collateral_amount.rs  calculate_depositories_redeemable_amount.rs  calculate_depositories_target_redeemable_amount.rs  maths.rs  mod.rs  validate_collateral_amount.rs
scripts/: common.ts  deploy_and_initialize.ts  initialize_xxusd.ts
sdk/: xxusd-client.ts
tests/: connection.ts  constants.ts  initialize_controller.test.ts  lock_and_release_xxusd.test.ts  manage_hedging_strategy.test.ts  manage_product_price.test.ts  mint_xxusd.test.ts  utils.ts
