[package]
name = "xxusd"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xxusd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.23"
bytemuck = { version = "1.18.0", features = ["derive"] }
bs58 = "0.4.0"
syn = "1.0.109"
borsh = "0.10.3"

[profile.release]
features = ["panic_immediate_abort"]
panic = "abort"